[gd_scene load_steps=7 format=2]

[ext_resource path="res://Select_Questions_Page/Questions_List/left-arrow-back.png" type="Texture" id=2]
[ext_resource path="res://Select_Questions_Page/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Select_Questions_Page/Questions_List/Questions_List.gd" type="Script" id=4]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 44
font_data = ExtResource( 3 )

[node name="QuestionsListPage" type="CanvasLayer"]
layer = 0
script = ExtResource( 4 )

[node name="BackgroudColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0666667, 0, 0.172549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBackButton" type="TextureButton" parent="BackgroudColor"]
material = SubResource( 1 )
margin_left = 16.0
margin_top = 520.0
margin_right = 528.0
margin_bottom = 1032.0
rect_scale = Vector2( 0.142873, 0.136946 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollBar" type="ColorRect" parent="BackgroudColor"]
margin_top = 128.0
margin_right = 1024.0
margin_bottom = 512.0
color = Color( 0.309804, 0.501961, 0.305882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="BackgroudColor/ScrollBar"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroudColor/ScrollBar/ScrollContainer"]
margin_bottom = 8.0

[node name="Category1" type="Control" parent="BackgroudColor/ScrollBar/ScrollContainer/VBoxContainer"]
rect_pivot_offset = Vector2( 256, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="BackgroudColor/ScrollBar/ScrollContainer/VBoxContainer/Category1"]
margin_left = 256.0
margin_top = 32.0
margin_right = 768.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton1" type="MenuButton" parent="BackgroudColor/ScrollBar/ScrollContainer/VBoxContainer/Category1/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.997725, 1 )
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BackgroudColor/ScrollBar/ScrollContainer/VBoxContainer/Category1/ColorRect/MenuButton1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "<CATEGORY NAME>"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Category2" type="Control" parent="BackgroudColor/ScrollBar/ScrollContainer/VBoxContainer"]
margin_top = 4.0
margin_bottom = 4.0
rect_pivot_offset = Vector2( 256, 156 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="BackgroudColor/ScrollBar/ScrollContainer/VBoxContainer/Category2"]
margin_left = 256.0
margin_top = 156.0
margin_right = 768.0
margin_bottom = 220.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton2" type="MenuButton" parent="BackgroudColor/ScrollBar/ScrollContainer/VBoxContainer/Category2/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BackgroudColor/ScrollBar/ScrollContainer/VBoxContainer/Category2/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "<CATEGORY NAME>"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Category3" type="Control" parent="BackgroudColor/ScrollBar/ScrollContainer/VBoxContainer"]
margin_top = 8.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( 256, 280 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="BackgroudColor/ScrollBar/ScrollContainer/VBoxContainer/Category3"]
margin_left = 256.0
margin_top = 280.0
margin_right = 768.0
margin_bottom = 344.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton3" type="MenuButton" parent="BackgroudColor/ScrollBar/ScrollContainer/VBoxContainer/Category3/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BackgroudColor/ScrollBar/ScrollContainer/VBoxContainer/Category3/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "<CATEGORY NAME>"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="BackgroudColor"]
margin_right = 1024.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 3 )
text = "QUESTIONS BANK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BackgroudColor/GoBackButton" to="." method="_on_GoBackButton_pressed"]
[connection signal="pressed" from="BackgroudColor/ScrollBar/ScrollContainer/VBoxContainer/Category1/ColorRect/MenuButton1" to="." method="_on_MenuButton1_pressed"]
